fix: header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header {
 
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .header-container {
